Testing fix to slider issue on mobile..

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ svg {
     height: auto;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     svg {
         width: 100%;
         height: auto;
